# modularity

./: activity_mod_script.py  analysis.py  auxiliary.py  figures.conf  figures.py  mod_architecture_script.py  modularizer_script.py  mt_relational_script.py  order_script.py  pyproject.toml  simple.py  visualization.py
modularity/: activity_mod_script.py  analysis.py  autoencoder.py  auxiliary.py  compositional.py  figures.conf  figures.py  mod_architecture_script.py  mt_blocked_script.py  mt_relational_script.py  sequential.py  simple.py  visualization.py  weights.py
modularity/mt_package/dataprep/: Data_Prep.py  __init__.py
modularity/mt_package/myerp/: ERP_Prep.py  __init__.py
modularity/mt_package/myrsa/: RSA_Prep.py
mt_package/myrsa/: __init__.py
