[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modularity"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wj2", email = "wjeffreyjohnston@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "matplotlib>=3.9.2",
  "scikit-learn>=1.5.1",
  "tensorboard>=2.16.2",
  "tensorflow>=2.16.2",
  "tensorflow-hub>=0.16.1",
  "tensorflow-probability>=0.24.0",
  "tf_keras>=2.16.0",
  "keras-cv>=0.9.0",
  "keras>=3.4.1",
  "mne>=1.9.0",
  "seaborn>=0.13.2",
]

[project.scripts]
activity_mod = "modularity.activity_mod_script:main"

[project.urls]
Documentation = "https://github.com/wj2/modularity#readme"
Issues = "https://github.com/wj2/modularity/issues"
Source = "https://github.com/wj2/modularity"

[tool.hatch.version]
path = "modularity/__about__.py"
